--- a/public/styles.css
+++ b/public/styles.css
@@ -710,9 +710,9 @@ input.form-control, textarea.form-control {
 /* --------------------------------------------- Tablet md ------------------------------------- */
 @media (max-width: 1008px) {
 
-  .colored-section {
+  /* .colored-section {
     color: rgb(14, 14, 14);
-  }
+  } */
 
   /* ----------------- Title Section ------------ */
   .nav-link{
@@ -881,9 +881,9 @@ input.form-control, textarea.form-control {
 
 /*------------------------------------- xs --> mobile ------------------------------------- */
 @media (max-width: 768px) {   
-  .section-title{
+  /* .section-title{
     color: #3f2893;
-  }
+  } */
 
   .feature-img {
     width: 55%;
@@ -931,9 +931,9 @@ input.form-control, textarea.form-control {
 
 /* --------------------------------------------- Mobile ------------------------------------- */
 @media (max-width: 600px) {
-  .colored-section {
+  /* .colored-section {
     color: rgb(220, 49, 49);
-  }
+  } */
 
    /* ----------------- Title Section ------------ */
    .nav-link{
@@ -951,7 +951,7 @@ input.form-control, textarea.form-control {
   .title-img {
     width: 60%;
     top: 12%;
-    left: -17%;
+    left: -19%;
   }
 
   .navbar-brand {
@@ -1081,9 +1081,9 @@ input.form-control, textarea.form-control {
 
 @media (max-width: 550px) {
 
-  .section-title{
+  /* .section-title{
     color: #be14b5;
-  }
+  } */
 
   .goals-gp {
     top: -7%;
@@ -1119,9 +1119,9 @@ input.form-control, textarea.form-control {
 
 @media (max-width: 463px) {
 
-  .section-title{
+  /* .section-title{
     color: #07bc0c;
-  }
+  } */
 
   .feature-rp {
     width: 49%;
@@ -1130,7 +1130,7 @@ input.form-control, textarea.form-control {
   }
 
   .goals-gp {
-    top: -6.8%;
+    top: -6.5%;
   }
 
   .eventSection-title{
